# zero2prod

./: Cargo.toml
scripts/: init_db.bat  init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: Cargo.toml  health_check.rs
